kubernetes/pod-cm-from-folder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex-3
spec:
  containers:
    - name: configmap-container-3
      image: ubuntu
      command: ['/bin/bash', '-ec', 'env; sleep 3600;']
