kubernetes/pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex-secret-1
spec:
  containers:
    - name: configmap-container
      image: ubuntu
      command: ['/bin/bash', '-ec', 'env; sleep 3600;']
