kubernetes/pod-with-secret-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-ex-2
spec:
  containers:
    - name: secret-container-2
      image: ubuntu
      command: ['/bin/bash', '-ec', 'ls /etc/appconfig; sleep 3600;']
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/appconfig
  volumes:
    - name: secret-volume
      secret:
        secretName: test-key-secret
