kubernetes/pod-with-secret-tls-file.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-ex-3
spec:
  containers:
    - name: secret-container-3
      image: ubuntu
      command: ['/bin/bash', '-ec', 'ls -ltr /etc/appconfig; sleep 3600;']
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/appconfig
  volumes:
    - name: secret-volume
      secret:
        secretName: tls-secret
