kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex
spec:
  containers:
    - name: configmap-container
      image: ubuntu
      command: ['/bin/bash', '-ec', 'env; sleep 3600;']
