kubernetes/pod1-cm-from-folder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex-4
spec:
  containers:
    - name: configmap-container-4
      image: ubuntu
      command: ['/bin/bash', '-ec', 'ls /etc/appconfig; sleep 3600;']
      volumeMounts:
        - name: config-volume
          mountPath: /etc/appconfig
  volumes:
    - name: config-volume
      configMap:
        name: cm-from-folder
