kubernetes/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-ex-2
spec:
  containers:
    - name: configmap-container-2
      image: ubuntu
      command: ['/bin/bash', '-ec', 'env; sleep 3600;']
      volumeMounts:
        - name: config-volume
          mountPath: /etc/appconfig
  volumes:
    - name: config-volume
      configMap:
        name: configmap-file
