kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bulltrading-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: bulltrading.info
      http:
        paths:
          - path:  /customers
            pathType: Prefix
            backend:
              service:
                name: customerservice
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8080
